--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -102,3 +101,6 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# do not check in password
+lib/server/password.py
